log file append mode

--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,5 +1,6 @@
 tinylog.writer = console
+tinylog.format = {date} {level}: {class}.{method}()\t{message}
 tinylog.writer.format = {message}
 tinylog.writer2 = file
 tinylog.writer2.filename = logs/info.log
-tinylog.format = {date} {level}: {class}.{method}()\t{message}
+tinylog.writer2.append = true
