--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -50,7 +55,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.kaishiyoku.youtubedownloadhelper.Main</mainClass>
+                            <mainClass>com.kaishiyoku.youtubedownloadhelper.MainKt</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -84,6 +89,11 @@
                             <resources>
                                 <resource>
                                     <directory>${basedir}/src/main/resources/bin</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                                <resource>
+                                    <directory>${basedir}/src/main/resources/config</directory>
+                                    <targetPath>${basedir}/target/config</targetPath>
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>
