closed #1 added the ability to set custom flags when downloading videos using youtube-dl

--- a/src/main/resources/config/default_config.json
+++ b/src/main/resources/config/default_config.json
@@ -1,9 +1,9 @@
 {
   "channels": [
     {
-      "title": "Linus Tech Tips",
-      "url": "https://www.youtube.com/user/LinusTechTips/videos",
-      "local_path": "C:\\YouTube Videos\\Linus Tech Tips"
+      "title": "Fun Fun Function",
+      "url": "https://www.youtube.com/channel/UCO1cgjhGzsSYb1rsB4bFe4Q/videos",
+      "local_path": "C:\\YouTube Videos\\Fun Fun Function"
     }
   ]
 }
